--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor excepturi recusandae quidem nulla qui commodi debitis cumque obcaecati molestiae error quasi, ipsam magni modi quibusdam sed minus pariatur quas! Harum!</p>
             <article>
-                <h2>Artigo 002</h2>
-                <p>Texto Artigo 002</p>
+                <h2>Curso de Javascript</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque deleniti eum debitis facilis sint eligendi, enim repellat deserunt delectus eius dicta autem asperiores accusamus odio. Eveniet, sed. Cumque, magnam omnis.</p>
             </article>
         </article>
     </main>
